<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">*RUNiN</string>
    <string name="banner_inferior_ad_unit_id">ca-app-pub-5956662992010209/9184285995</string>
    <string name="navigation_drawer_open">Abrir el menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar el menú de navegación</string>
    <string name="action_settings">Configuración</string>
    <string name="welcome_tutorial_1"><i>BIENVENIDO</i></string>
    <string name="welcome_tutorial_2"><i>PROGRAMAS</i></string>
    <string name="welcome_tutorial_3"><i>PROGRAMAS</i></string>
    <string name="welcome_tutorial_4"><i>MEJÓRATE</i></string>
    <string name="content_tutorial_1">Esta app para corredores te ofrece entrenamientos para <b>caminadora</b> o crear tu <b>propia ruta</b> al aire libre.</string>
    <string name="content_tutorial_2"><b>INDOOR RUNNING</b>\nSiente la experiencia de correr en los parques más atractivos de México y París, dejándote guiar por nuestros entrenadores personalizados.</string>
    <string name="content_tutorial_3"><b>OUTDOOR RUNNING</b>\nCorre con nuestros planes de entrenamiento enfocados en velocidad o distancia.</string>
    <string name="content_tutorial_4">Plantéate objetivos en <b>ritmo y calorías</b> y supera tus récords personales y los de tus amigos.</string>
    <string name="name_placeholder">Nombres</string>
    <string name="last_name_placeholder">Apellidos</string>
    <string name="weight_placeholder">Peso</string>
    <string name="height_placeholder">Altura</string>
    <string name="birth_placeholder">Fecha de nacimiento</string>
    <string name="gender_placeholder">Género</string>
    <string name="units_placeholder">Unidades de medida</string>
    <string name="save"><i>GUARDAR</i></string>
    <string name="select_place_run_title">Es momento de elegir</string>
    <string name="select_place_description">Cada persona tiene una meta y solo depende de ti decidir como llegarás a ella.</string>
    <string name="indoor">INDOOR</string>
    <string name="runner">RUNNER</string>
    <string name="indoor_description">Te mantienes motivado con nuestros videos, sabes que no es necesario estar al aire libre para obtener los resultados que deseas.</string>
    <string name="outdoor">OUTDOOR</string>
    <string name="outdoor_description">Lo tuyo es avanzar contra viento y marea. Tus rasgos te definen como un aventurero del Running.</string>
    <string name="select_plan_outdoor">Selecciona tu plan</string>
    <string name="select_level_indoor">Elige tu nivel</string>
    <string name="indications_outdoor">Con unos pocos pasos podemos enfocarte al mejor plan de entrenamiento, dependiendo de tus objetivos.</string>
    <string name="indications_indoor">Selecciona el perfil de corredor que te queda mejor, para ofrecerte programas de entrenamiento personalizado.</string>
    <string name="quick_start">QUICK START</string>
    <string name="badges_title">Insignias</string>
    <string name="goal_percentage">Porcentaje de avance</string>
    <string name="select_track">Selecciona la pista</string>
    <string name="earned_badges">Insignias ganadas</string>
    <string name="quick_start_description">Te permite correr sin necesidad de entrar a algún plan de entrenamiento o carrera.</string>
    <string name="training_plans">PLANES DE ENTRENAMIENTO</string>
    <string name="training_plans_description">Los planes de entrenamiento te preparan para correr distintos tipos de carrera, desde 3 km hasta 10 km.</string>
    <string name="improve">MEJÓRATE</string>
    <string name="improve_description">Esta modalidad te permite mejorar tus tiempos sin necesidad de estar en un Plan de Entrenamiento.</string>
    <string name="title_quick_start">CORRE SIN LÍMITES</string>
    <string name="quick_start_subtitle">Sin necesidad de planes; se libre al correr como tu quieras.</string>
    <string name="mejorate_subline">Compite contra ti mismo.</string>
    <string name="mejorate_subtitle">Mejórate es un plan que te permite superarte a ti mismo.</string>
    <string name="start_button_text"><i>COMENZAR</i></string>
    <string-array name="gender">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="improve_goal_mts">Objetivo/Real (m)</string>
    <string name="improve_goal_min">Objetivo/Real (min)</string>
    <string-array name="units">
        <item>Métrico</item>
        <item>Imperial</item>
    </string-array>
    <string name="km_placeholder">0.00</string>
    <string name="km_title">kilómetros</string>
    <string name="rate">Ritmo</string>
    <string name="km_title_result">kilómetros</string>
    <string name="calories">Calorías</string>
    <string name="show_map">Mostrar mapa</string>
    <string name="hide_map">Ocultar mapa</string>
    <string name="invalida_date">Fecha de nacimiento no válida</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Perfil</string>
    <string name="settings">Ajustes</string>
    <string name="community">Comunidad</string>
    <string name="mode">Cambiar modo a:</string>
    <string name="badges">Insignias</string>
    <string name="outdoor_plan">PLAN OUTDOOR</string>
    <string name="outdoor_improve">MEJÓRATE</string>
    <string name="Intervalos_fuertes">Intervalos fuertes</string>
    <string name="entrenamiento_prueda">PRUEBA</string>
    <string name="entrenamiento_preparacion">PREPARACIÓN</string>
    <string name="entrenamiento_inicial">PRUEBA INICIAL</string>
    <string name="entrenamiento_final">PRUEBA FINAL</string>
    <string name="entrenamiento_fallido">No completado</string>
    <string name="completed">Completado</string>
    <string name="entrenamiento_logrado">Exitoso</string>
    <string name="dist_min">Para completar con éxito este entrenamiento debes correr una distancia mínima de: </string>
    <string name="porcentaje_completado">&#37; completado</string>
    <string name="restore_buys">Restaurar compras</string>
    <string name="tutorial">Tutorial</string>
    <string name="help">Ayuda</string>
    <string name="about_us">Acerca de nosotros </string>
    <string name="rate_app">Califica esta aplicación</string>
    <string name="report_error">Reportar un error</string>
    <string name="terms_use">Términos de uso</string>
    <string name="privacy_notice">Aviso de privacidad</string>
    <string-array name="tutorials">
        <item>Comenzar</item>
        <item>Planes Outdoor</item>
        <item>Planes Indoor</item>
    </string-array>
    <string name="about_us_fragment"><b>NOSOTROS</b>\n\nCon los años hemos viajado por el mundo y competido en las carreras y maratones más importantes.\n\nNos dimos cuenta que podíamos compartir nuestra experiencia y adrenalina de las grandes atmósferas mediante la creación de una aplicación que trae la belleza de la naturaleza combinado con el turismo de las capitales del mundo.\n\n<b>*RUNiN</b> es una forma alternativa de rutina de ejercicio utilizando todas las cualidades de los teléfonos inteligentes.\n\nNuestro objetivo es hacerte viajar por el mundo mientras te ejercitas de manera eficiente.</string>
    <string name="about_us_fragment2"><b>NOSOTROS</b>\n\n*RUNiN app es una alternativa de entrenamiento para corredores.\n\nNuestro objetivo es motivarte y plantearte nuevos retos mientras mejoras tu rendimiento.\n\nCorre por el mundo, hoy disponible Ciudad de México y París, disfrutando de nuestros planes de entrenamiento hechos a tu medida desde tu caminadora o sal, crea tu ruta y prepárate para una carrera.\n\nSigue tus resultados y desafía a tus amigos a mejorarlos.\n\n<b>HISTORIA</b>\n\nDurante mis viajes salía a correr para distraerme. Me di cuenta de que descubriendo las calles de una nueva ciudad me animaba a correr más de lo que yo creía ser capaz.\n\nEs por eso que decidí buscar replicar esa experiencia para poder seguir descubriendo cuando quisiera. Entendí que la monotonía mental es más fuerte que el cansancio de mis piernas.\n\nHicimos esta app porque buscamos que nunca dejes de estar motivado para alcanzar tus metas y siempre tengas a la mano un entrenador que de seguimiento a tus logros.\n\n<b>Niveles Indoor</b>\n\nDebutante - Beginner\nCompetidor - Competitor\nAtleta - Athlete\nCorredor – Runner\n\n<b>Funcionalidades Outdoor</b>\n\nQuick start- Quick Start\nMejórate- Improve\nPlan de entrenamiento- Training plan</string>
    <string name="next_button"><i>SIGUIENTE</i></string>
    <string name="tab_status">Estatus</string>
    <string name="tab_objetivo">Objetivo</string>
    <string name="tab_average">Promedio</string>
    <string name="plantype_title">Selecciona tu tipo de plan</string>
    <string name="detail_plans">No todas las personas son iguales, cada una necesita de un plan especial para sus objetivos y enfocado a sus capacidades.</string>
    <string name="detail_plansbot">Con unos pocos pasos podemos enfocarte al mejor plan de entrenamiento, dependiendo de tus objetivos.</string>
    <string name="distancetitle">ENFOCADO EN LA DISTANCIA</string>
    <string name="speedtitle">ENFOCADO A VELOCIDAD</string>
    <string name="distancedesc">Plan diseñado para incrementar la distancia a la que puedes correr. Esto te permitirá correr tus primeros 5km o incluso un maratón.</string>
    <string name="speeddesc">Diseñado para mejorar la velocidad a la que corres. Es un plan hecho para que incrementes gradualmente tu velocidad.</string>
    <string name="title_mejorate">MEJÓRATE</string>
    <string name="km_abrv">km</string>
    <string name="stillthere">¡CLARO!</string>
    <string name="stilltitle">¿SIGUES AHÍ?</string>
    <string name="stillstart">Sólo te estaba\nprobando yo a ti</string>
    <string name="stillbreak">Dame un respiro</string>
    <string name="detail_1">Fase</string>
    <string name="detail_3">Ritmo \n (min/km)</string>
    <string name="detail_4">Tiempo \n (min)</string>
    <string name="detail_5">Estatus</string>
    <string name="demo">Demo</string>
    <string name="select_your_music">Selecciona tu música</string>
    <string name="remove_videos">Puedes eliminar los videos de los programas para las pistas Indoor descargadas desde Ajustes > Gestión de videos. Una vez que hayas comprado las pistas puedes descargarlas nuevamente.</string>
    <string name="eliminar_videos_higher_and_faster">Remover Higher and Faster</string>
    <string name="eliminar_videos_harder_and_stronger">Remover Harder and Stronger</string>
    <string name="eliminar_videos_further_and_longer">Remover Further and Longer</string>
    <string name="obtaining_location_to_start_race">Estamos obteniendo tu localización para poder iniciar la carrera.</string>
</resources>