<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

    <TextView
        android:id="@+id/still"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/stilltitle"/>


    <LinearLayout
        android:id="@+id/acceptstill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stillthere"
            android:textColor="@color/gray"
            android:textSize="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/stillstart"
            android:textColor="@color/gray"
            android:textSize="30sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acceptstill"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/stillbreak"
        android:textSize="25sp"/>
</RelativeLayout>