<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.runin.runinapp.settings.SettingsManageVideosActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/remove_videos"/>

        <Button
            android:id="@+id/demo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="center_vertical|start"
            android:onClick="removeDemoVideosClick"
            android:text="@string/demo"/>

        <Button
            android:id="@+id/higher_and_faster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="center_vertical|start"
            android:onClick="removeHigherAndFasterVideosClick"
            android:text="@string/eliminar_videos_higher_and_faster"/>

        <Button
            android:id="@+id/harder_and_stronger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="center_vertical|start"
            android:onClick="removeHarderAndStrongerVideosClick"
            android:text="@string/eliminar_videos_harder_and_stronger"/>

        <Button
            android:id="@+id/further_and_longer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="center_vertical|start"
            android:onClick="removeFurtherAndLongerVideosClick"
            android:text="@string/eliminar_videos_further_and_longer"/>
    </LinearLayout>
</LinearLayout>