<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/layoutImproveHistory"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:orientation="vertical"
              android:paddingLeft="15dp"
              android:paddingRight="15dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee">
    </FrameLayout>

    <TableLayout
        android:id="@+id/TableImproveYourself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:weightSum="1"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/km_abrv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/tab_objetivo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/tab_average"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/tab_status"/>
        </TableRow>
    </TableLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee">
    </FrameLayout>

</LinearLayout>