<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/toolbar_improve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layoutObtainingLocation"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_morado"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obtaining_location_to_start_race"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/improve_middle"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/title_improve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_mejorate"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/purpleCreamColor"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/linea_diagonal_improve"
            tools:ignore="ContentDescription"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/subtitle_improve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:text="@string/mejorate_subline"
                    android:textColor="@color/colorQS"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="18dp"
                    android:text="@string/mejorate_subtitle"/>

                <View
                    android:id="@+id/line_place"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/select_your_music"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_player_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button_start"
            style="@style/Button.Orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/start_button_text"/>
    </LinearLayout>
</LinearLayout>